--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <li class="acctNav"><a href="#" class="active">Login</a></li>
                     <li class="acctNav"><a href="#">See More</a></li>
                     <li><input type="search" id="search" placeholder="Search" /></li>
-                    <li><a href="#"><img src="./assets/facebook_icon.png" alt="Facebook Icon" height="35"
+                    <li><a href="#"><img src="./Assets/facebook_icon.png" alt="Facebook Icon" height="35"
                                 width="35" /></a>
                     </li>
-                    <li><a href="#"><img src="./assets/twitter_icon.png" alt="Twitter Icon" height="35"
+                    <li><a href="#"><img src="./Assets/twitter_icon.png" alt="Twitter Icon" height="35"
                                 width="35" /></a>
                     </li>
-                    <li><a href="#"><img src="./assets/instagram_icon.png" alt="Instagram Icon" height="35"
+                    <li><a href="#"><img src="./Assets/instagram_icon.png" alt="Instagram Icon" height="35"
                                 width="35" /></a>
                     </li>
                 </ul>
